# vaudience

./: docker-compose.yml
backend/: Dockerfile  docker-compose.yml  requirements.txt
backend/app/: exceptions.py  main.py
backend/app/categorys/: dao.py  models.py  (+2 more)
frontend/: Dockerfile  nginx.conf
vaudience_backend/: .gitignore  Dockerfile  main.py  pyproject.toml  req.txt
vaudience_backend/alembic/versions/: 2025_03_18_1759-576650f058da_initialize_tables.py  2025_03_25_1304-d8f86f2ed853_created_productsize_table_relatinship_.py  2025_04_07_2258-17007c1f3587_added_phone_to_user_table.py  2025_04_15_1545-ec7fbf56305e_create_cart_model_and_relation_between_.py  2025_04_18_1752-627608ca80cf_create_favorite_table_and_relation_to_.py
vaudience_backend/api_v1/: __init__.py
vaudience_backend/api_v1/cart/: crud.py  schemas.py  views.py
vaudience_backend/api_v1/category/: crud.py  schemas.py  views.py
vaudience_backend/api_v1/favorite/: crud.py  schemas.py  views.py
vaudience_backend/api_v1/images/: schemas.py
vaudience_backend/api_v1/products/: crud.py  schemas.py  views.py
vaudience_backend/api_v1/users/: crud.py  schemas.py  token.py  views.py
vaudience_backend/core/: config.py
vaudience_backend/core/models/: __init__.py  base.py  cart.py  category.py  db_helper.py  favorite.py  image.py  product.py  user.py
vaudience_backend/core/services/auth/: helpers.py  utils.py  validation.py
vaudience_backend/core/services/shared/: dependencies.py
vaudience_frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.js
(+57 files in other folders)
