[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
fastapi = "^0.115.8"
black = "^25.1.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
pydantic-settings = "^2.8.1"
alembic = "^1.15.1"
passlib = "^1.7.4"
python-jose = "^3.4.0"
bcrypt = "^4.3.0"
python-multipart = "^0.0.20"
pyjwt = "^2.10.1"
aiosqlite = "^0.21.0"
sqlalchemy = "^2.0.40"
